--- a/src/SpotifyTools.Web/Pages/Home.razor
+++ b/src/SpotifyTools.Web/Pages/Home.razor
@@ -2,8 +2,11 @@
 @using SpotifyTools.Web.Services
 @using SpotifyTools.Web.DTOs
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Components.Web
 @inject ApiClientService ApiClient
 @inject IJSRuntime JS
+
+@attribute [StreamRendering]
 
 <PageTitle>Playlist Manager</PageTitle>
 
