--- a/src/SpotifyTools.Web/Components/App.razor
+++ b/src/SpotifyTools.Web/Components/App.razor
@@ -8,6 +8,7 @@
     <base href="/" />
     <title>Spotify Tools</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
     <HeadOutlet @rendermode="RenderMode.InteractiveServer" />
 </head>
