Claude tapped out, and refuses to work any more until Thrusday :-D.  This commit is all about styling updates.  We're giving it a more familiar Spotify look and feel with menu layous, colors, etc.  Next up will be to add more features around playlist management.

--- a/src/SpotifyTools.Web/Components/MainLayout.razor
+++ b/src/SpotifyTools.Web/Components/MainLayout.razor
@@ -1,5 +1,18 @@
 @inherits LayoutComponentBase
 
-<div>
-    @Body
+<div class="spotify-layout">
+    <Sidebar IsOpen="@sidebarOpen" IsOpenChanged="@OnSidebarToggle" />
+    <TopBar OnToggleSidebar="@OnSidebarToggle" />
+    <main class="spotify-main">
+        @Body
+    </main>
 </div>
+
+@code {
+    private bool sidebarOpen = false;
+
+    private void OnSidebarToggle()
+    {
+        sidebarOpen = !sidebarOpen;
+    }
+}
